examples/illTyped/intSymbolMismatch.bgl
game G

type TA = {A}

err : Bool
err = 1 == A
